--- a/packaging/files/lorawan-application-server.service
+++ b/packaging/files/lorawan-application-server.service
@@ -1,13 +1,12 @@
 [Unit]
-Description=ChirpStack Application Server
-Documentation=https://www.chirpstack.io/
+Description=Lorawan Application Server
 Wants=network-online.target
 After=network-online.target
 
 [Service]
 User=appserver
 Group=appserver
-ExecStart=/usr/bin/chirpstack-application-server
+ExecStart=/usr/bin/lorawan-application-server
 Restart=on-failure
 
 [Install]
